# ce-serve

./: .gitignore  Cargo.toml  Dockerfile  ceapp.toml
assets/: mesh-bridge.js
deploy/: README.md  ce-serve.gke.yaml  ce-serve.service
src/: main.rs  mesh_bridge.rs  resolve.rs
