[package]
name = "ce-serve"
version = "0.1.0"
edition = "2024"
description = "The HTTP edge of ce-net: the only public HTTP tier. Serves content-addressed app bundles (incl. the Svelte ce-net.com frontend) over HTTP, and hosts the /mesh-bridge WebSocket so a served page becomes a real mesh node. Everything else is a mesh backend it reaches over the mesh, not HTTP."

[[bin]]
name = "ce-serve"
path = "src/main.rs"

# ce-serve-publish was MOVED to the standalone `ce-publish` app (~/ce-net/ce-publish): publishing is a
# workflow over node primitives, not ce-serve's concern. ce-publish does web bundles AND native/wasm
# artifact+manifest publishing, superseding both this bin and the hardcoded `ce app publish`.

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# ce-rs SDK: how the edge reaches the mesh (drive the co-located ce node over http://127.0.0.1:8844).
# The browser never holds the node token; ce-serve forwards mesh calls on its behalf over /mesh-bridge.
ce-rs = { git = "https://github.com/ce-net/ce-rs" }
# Used only by the ce-serve-publish tool to register a host->bundle in ce-hub over HTTP (admin op).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
